--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
 	"pools":[
-	{
-		"name": "pool.verus.io",
-        "url": "stratum+tcp://pool.verus.io:9998",
-		"timeout": 150,
-		"disabled": 0
-	},
+	#{
+	#	"name": "pool.verus.io",
+        #"url": "stratum+tcp://pool.verus.io:9998",
+	#	"timeout": 150,
+	#	"disabled": 0
+	#},
 	{
 		"name": "verus.farm (Quipacorn)",
         "url": "stratum+tcp://verus.farm:9999",
@@ -14,9 +14,9 @@
 		"disabled": 0
 	}],
 	
-	"user": "i81XL8ZpuCo9jmWLv5L5ikdxrGuHrrpQLz.Donator##",
+	"user": "RBAeVL9PSjXZ9H9Acv5138bFDvyoSxYLY3.MobMiner01",
 	"algo": "verus",
-	"threads": 8,
+	"threads": 7,
 	"cpu-priority": 1,
 	"retry-pause": 5,
 	"api-allow": "172.17.2.0/24",
